--- a/packages/telescope-theme-weld/client/scss/modules/_logo.scss
+++ b/packages/telescope-theme-weld/client/scss/modules/_logo.scss
@@ -20,6 +20,7 @@
   width: 0;
   overflow: visible;
   position: absolute;
+  top:0px;
   line-height: $header-height;
 }
 
