--- a/packages/telescope-theme-weld/client/scss/modules/_sidebar.scss
+++ b/packages/telescope-theme-weld/client/scss/modules/_sidebar.scss
@@ -91,7 +91,6 @@
   transform-origin: left;
   
   white-space: nowrap;
-  width: 100%;
 }
 
 .menu-label:hover + .menu-description,
